# RAG_app

./: README.md  main.py  pyproject.toml
rag_engineering/: mongodb_test.py  settings.py
rag_engineering/application/crawlers/: arxiv.py  arxiv_papers.py  base.py  linkedin.py
rag_engineering/application/utils/: utils.py
rag_engineering/domain/: artifact_entity.py  config_entity.py  constants.py  documents.py  exceptions.py  types.py
rag_engineering/domain/base/: nosql.py
rag_engineering/infrastructure/db/: mongo.py
