[tool.poetry]
name = "rag_engineering"
version = "0.1.0"
description = ""
authors = ["Basit Ali <alibasit78@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "~3.11"
zenml = { version = "0.67.0", extras = ["server"] }
pymongo = "^4.6.2"
click = "^8.0.1"
loguru = "0.7.2"
rich = "^13.7.1"
numpy = "^1.26.4"
poethepoet = "0.29.0"
datasets = "^3.0.1"

# Digital data ETL
selenium = "^4.21.0"
webdriver-manager = "^4.0.1"
beautifulsoup4 = "^4.12.3"
html2text = "^2024.2.26"
jmespath = "^1.0.1"
chromedriver-autoinstaller = "^0.6.4"
arxiv = "^2.1.3"
pypdf2 = "^3.0.1"
